--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "react-flash-message": "1.0.8"
   },
   "devDependencies": {
     "redux-devtools-extension": "^2.13.8"
