--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,14 @@
 
 # Ignore bundler config.
 /.bundle
+/bundle.js*
 
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+/public/assets
 
 /node_modules
 /yarn-error.log
