--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.1",
     "react-flash-message": "1.0.8"
   },
   "devDependencies": {
+    "redux-logger": "^3.0.6",
     "redux-devtools-extension": "^2.13.8"
   },
+  "engines": {
+    "node": "14.18.2",
+    "npm": "6.14.15"
+  },
   "scripts": {
+    "postinstall": "webpack",
     "start": "webpack -w --mode=development"
   }
 }
